--- a/index.html
+++ b/index.html
@@ -9,29 +9,41 @@
     <table cellpadding="30">
         <tr>
             <td>
+                <a href="https://img.freepik.com/premium-photo/nft-wallpapers-high-quality-digital-scenes_290562-331.jpg?w=1060">
                 <img src="image/1photo.jpg" width="400px"><br>
+                </a>
                 <a href="https://img.freepik.com/premium-photo/nft-wallpapers-high-quality-digital-scenes_290562-331.jpg?w=1060">View Full Image</a>
             </td>
             <td>
+                <a href="https://kartinki.pics/pics/uploads/posts/2022-08/1660508713_1-kartinkin-net-p-oboi-visokogo-kachestva-krasivo-1.jpg">
                 <img src="image/2photo.jpg" width="400px"><br>
+                </a>
                 <a href="https://kartinki.pics/pics/uploads/posts/2022-08/1660508713_1-kartinkin-net-p-oboi-visokogo-kachestva-krasivo-1.jpg">View Full Image</a>
             </td>
             <td>
+                <a href="image/3photo.jpg">
                 <img src="image/3photo.jpg" width="400px"><br>
+                </a>
                 <a href="image/3photo.jpg">View Full Image</a>
             </td>
         </tr>
         <tr>
             <td>
+                <a href="https://img.freepik.com/premium-photo/abstract-background-with-glowing-lights-gold-and-blue-high-quality-wallpaper-8k_693425-10158.jpg?w=1060">
                 <img src="image/4photo.jpg" width="400px"><br>
+                </a>
                 <a href="https://img.freepik.com/premium-photo/abstract-background-with-glowing-lights-gold-and-blue-high-quality-wallpaper-8k_693425-10158.jpg?w=1060">View Full Image</a>
             </td>
             <td>
+                <a href="image/5photo.jpg">
                 <img src="image/5photo.jpg" width="400px" ><br>
+                </a>
                 <a href="image/5photo.jpg">View Full Image</a>
             </td>
             <td>
+                <a href="https://polinka.top/uploads/posts/2023-05/1684925550_polinka-top-p-kartinki-na-zastavku-telefona-visokogo-kac-2.jpg">
                 <img src="image/6photo.jpg" width="400px" height="230px"><br>
+                </a>
                 <a href="https://polinka.top/uploads/posts/2023-05/1684925550_polinka-top-p-kartinki-na-zastavku-telefona-visokogo-kac-2.jpg">View Full Image</a>
             </td>
         </tr>
